--- a/src/app/products/cart/cart.component.html
+++ b/src/app/products/cart/cart.component.html
@@ -50,3 +50,12 @@
           </tr>
       </tfoot>
   </table>
+
+
+  <div class="row">
+      <div class="col-md-12 text-center">
+        <button class="btn btn-primary">More Shopping</button>
+        <button class="btn btn-primary" (click)="gotoCheckout()">Checkout</button>
+      </div>
+
+  </div>
