--- a/src/app/products/products/products.component.html
+++ b/src/app/products/products/products.component.html
@@ -13,7 +13,7 @@
         </ul>
         <ul class="nav navbar-nav ml-auto w-100 justify-content-end nav-right-color">
             <li class="nav-item pr-2">
-                <a class="nav-link" href="#">Adimn</a>
+                <a class="nav-link" href="javascript:void(0)" (click)="gotoAdmin()">Adimn</a>
             </li>
             <li class="nav-item">
               <span>{{quantity}} item(s)</span>
