--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -68,9 +68,47 @@
              <td>{{product.name}}</td>
              <td>{{product.price |currency:usd}}</td>
              <td>{{product.category}}</td>
-             <td><button class="btn btn-primary">Edit</button></td>
-             <td><button class="btn btn-danger">Delete</button></td>
+             <td><button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" (click)="editProduct(product)">Edit</button></td>
+             <td><button class="btn btn-danger" (click)="deleteProduct(product)">Delete</button></td>
 
          </tr>
         </tbody>
     </table>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Edit Product</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="container">
+          <form #productForm="ngForm">
+              <div class="form-group">
+                <label for="name">Product Name</label>
+                <input type="text" class="form-control" id="name" [(ngModel)]="product.name" name="name">
+              </div>
+              <div class="form-group">
+                  <label for="address">Product Price</label>
+                  <input type="text" class="form-control" id="address" [(ngModel)]="product.price" name="address">
+                </div>
+                <div class="form-group">
+                  <label for="city">Product Category</label>
+                  <input type="text" class="form-control" id="city" [(ngModel)]="product.category" name="city">
+                </div>
+                </form>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="updateProduct()" data-dismiss="modal">Update</button>
+      </div>
+    </div>
+  </div>
+</div>
