--- a/src/app/products/products/products.component.html
+++ b/src/app/products/products/products.component.html
@@ -88,6 +88,7 @@
                   <h5 class="card-title">{{product.name}}</h5>
                   <p class="card-text">{{product.price | currency:'CAD' }}</p>
                   <a href="javascript:void(0)" class="btn btn-primary" (click)="addToCart(product)">Add to cart</a>
+                  <a href="javascript:void(0)" class="btn btn-primary" (click)="gotoDetail(product)">View Details</a>
                 </div>
               </div>
           </div>
